--- a/views/user/new.erb
+++ b/views/user/new.erb
@@ -2,11 +2,11 @@
 	
 	<form action="/user" method="post">
 		
-		<input name="email"    							type="email"    						 placeholder="Example@domain.com" value="<%= @user.email %>" >
-		<input name="password" 							type="password" 						 placeholder="Password">
-		<input name="password_confirmation" type="password_confirmation" placeholder="Password Confirmation">
-		<input name="name"     							type="text"     						 placeholder="Name">
-		<input name="user_name"							type="text"     						 placeholder="User Name">
+		<input name="email"    							type="email"     placeholder="Example@domain.com" value="<%= @user.email %>" >
+		<input name="password" 							type="password"  placeholder="Password">
+		<input name="password_confirmation" type="password"  placeholder="Password Confirmation">
+		<input name="name"     							type="text"      placeholder="Name">
+		<input name="user_name"							type="text"      placeholder="User Name">
 
 		<button type="submit">Sign Up</button>
 
