--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
 	
 	<% if current_user %>
 		
-		<h1> Welcome to Chitter <%=current_user.email%> </h1>
+		<h1> Welcome to Chitter <%=current_user.user_name%></h1>
 
 	<% end %>
 
