--- a/views/users/new.erb
+++ b/views/users/new.erb
@@ -1,8 +1,8 @@
 <section class="sign_up">
 	
-	<form action="/user" method="post">
+	<form action="/users" method="post">
 		
-		<input name="email"    							type="email"     placeholder="Example@domain.com" value="<%= @user.email %>" >
+		<input name="email"    							type="email"     placeholder="Example@domain.com" >
 		<input name="password" 							type="password"  placeholder="Password">
 		<input name="password_confirmation" type="password"  placeholder="Password Confirmation">
 		<input name="name"     							type="text"      placeholder="Name">
