--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,12 +5,23 @@
 	<title>Chitter</title>
 </head>
 <body>
+	<% if flash[:notice] %>
+    <div id="notice">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
 	
 	<% if current_user %>
 		
 		<h1> Welcome to Chitter <%=current_user.user_name%></h1>
 
+		<form action="/sessions" method="post">
+			<input type="hidden" name="_method" value="delete">
+			<button type="submit">Sign Out</button>
+		</form>
+
 	<% end %>
+
 
 
 	<% if flash[:errors] && !flash[:errors].empty? %>
