moved old version

--- a/old_version/views/users/new.erb
+++ b/old_version/views/users/new.erb
@@ -1,6 +1,6 @@
 <section class="sign_up">
 	
-	<form action="/users" method="post">
+	<form action="/users/new" method="post">
 		
 		<input name="email"    							type="email"     placeholder="Example@domain.com" >
 		<input name="password" 							type="password"  placeholder="Password">
