--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,9 @@
-<h1>Hello world</h1>
+<h1>Welcome to Chiter</h1>
+
+<% @chiters.each do | chit | %>
+	
+	<ul>
+		<li> <%= chit.content %> </li>
+	</ul>
+
+<% end %>
