deleted old files

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 <% @chiters.each do | chit | %>
 	
 	<ul>
-		<li> <%= chit.content %> </li>
+		<li> <%= chit.content %> <span> <%= chit.at_time %> </span> </li>
 	</ul>
 
 <% end %>
