after sign up redirects to profile page, tested

--- a/app/views/user/new_user.erb
+++ b/app/views/user/new_user.erb
@@ -1,5 +1,5 @@
 <section>
-	<form action="/new_user" method="post">
+	<form action="/user/new_user" method="post">
 		<input type="text"      name="email"            placeholder="Email">
 		<input type="password"  name="password"         placeholder="Password">
 		<input type="password"  name="confirm_password" placeholder="Confirm Password">
