--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,11 @@
 <h1>Welcome to Chiter</h1>
 
+<a href="/user/new_user">Sign Up</a>
+
+<% @chiters.each do | chit | %>
+	
+	<ul>
+		<li> <%= chit.content %> <span> <%= chit.at_time %> </span> </li>
+	</ul>
+
+<% end %>
