--- a/app/views/user/new_user.erb
+++ b/app/views/user/new_user.erb
@@ -1,3 +1,7 @@
+	<% if flash[:notice] %>
+  <div id="notice"><%= flash[:notice] %></div>
+<% end %>
+
 <section>
 	<form action="/user/new_user" method="post">
 		<input type="text"      name="email"            placeholder="Email">
