--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,6 +3,7 @@
 <h1>Welcome to Chiter</h1>
 
 <a href="/user/new_user">Sign Up</a>
+<a href="/session/new">Sign In</a>
 
 <% @chiters.each do | chit | %>
 	
