--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 <h1>Welcome to Chiter</h1>
 
 <a href="/user/new_user">Sign Up</a>
-<a href="/session/new">Sign In</a>
+<a href="/session/new_session">Sign In</a>
 
 <% @chiters.each do | chit | %>
 	
