--- a/app/views/user/new_user.erb
+++ b/app/views/user/new_user.erb
@@ -9,11 +9,11 @@
 
 <section>
 	<form action="/user/new_user" method="post">
-		<input type="text"      name="email"            placeholder="Email">
-		<input type="password"  name="password"         placeholder="Password">
-		<input type="password"  name="confirm_password" placeholder="Confirm Password">
-		<input type="text"      name="name"             placeholder="Name">
-		<input type="text"      name="user_name"        placeholder="User Name">
+		<input type="text"      name="email"                 placeholder="Email">
+		<input type="password"  name="password"              placeholder="Password">
+		<input type="password"  name="password_confirmation" placeholder="Confirm Password">
+		<input type="text"      name="name"                  placeholder="Name">
+		<input type="text"      name="user_name"             placeholder="User Name">
 
 		<button type="submit">Save Chiter</button>
 	</form>
