added layout.erb and some refactoring

--- a/app/views/user/new_user.erb
+++ b/app/views/user/new_user.erb
@@ -1,13 +1,4 @@
-<% if flash[:errors] && !flash[:errors].empty? %>
-  Sorry, there were the following problems with the form.
-  <ul id="errors">
-    <% flash[:errors].each do |error| %>
-      <li><%= error %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<section>
+<section class="new_user">
 	<form action="/user/new_user" method="post">
 		<input type="text"      name="email"                 placeholder="Email">
 		<input type="password"  name="password"              placeholder="Password">
