--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,10 +5,14 @@
 <a href="/user/new_user">Sign Up</a>
 <a href="/session/new_session">Sign In</a>
 
-<% @chiters.each do | chit | %>
+<section class="chitters">
+	<% @chiters.each do | chit | %>
 	
-	<ul>
-		<li> <%= chit.content %> <span> <%= chit.at_time %> </span> </li>
-	</ul>
+		<div class="chit">
+			<ul>
+				<li> <%= chit.content %> <span> <%= chit.at_time %> </span> </li>
+			</ul>
+		</div>
+	<% end %>	
 
-<% end %>
+</section>
