--- a/app/views/session/new_session.erb
+++ b/app/views/session/new_session.erb
@@ -1,4 +1,4 @@
-<section>
+<section class="new_session">
 	<form action="/session/new_session" method="post">
 		<input type="text"     name="user_name"             placeholder="User Name">
 		<input type="password" name="password"              placeholder="Password">
