--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -1,11 +1,14 @@
-
-<h1>Welcome <%= @user.user_name %></h1>
-<%= @user.name %>
-<%= @user.email %>
-
-<form action="/user/profile" method="post">
+<section class="profile">
+	<h1>Welcome <%= @user.user_name %></h1>
 	
-	<input type="hidden" method="_delete">
-	<button type="submit">Sign Out</button>
-</form>
+	<%= @user.name %>
+	<%= @user.email %>
 
+	<form action="/user/profile" method="post">
+		
+		<input type="hidden" method="_delete">
+		<button type="submit">Sign Out</button>
+	</form>
+
+	
+</section>
