--- a/app/views/user/new_user.erb
+++ b/app/views/user/new_user.erb
@@ -6,6 +6,6 @@
 		<input type="text"      name="name"                  placeholder="Name">
 		<input type="text"      name="user_name"             placeholder="User Name">
 
-		<button type="submit">Save Chiter</button>
+		<button type="submit">Save Chitter</button>
 	</form>
 </section>
