--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -15,15 +15,15 @@
 
 	<form action="/user/profile" method="post">
 		<textarea name="content" cols="30" rows="10"></textarea>
-		<button type="submit">Post a chit</button>
+		<button type="submit">Post a chitt</button>
 	</form>
 
 <section class="chitters">
-	<% @chiters.each do | chit | %>
+	<% @chitters.each do | chitt | %>
 	
 		<div class="chit">
 			<ul>
-				<li> <%= chit.content %> <span> <%= chit.at_time %> </span> </li>
+				<li> <%= chitt.content %> <span> <%= chitt.at_time %> </span> </li>
 			</ul>
 		</div>
 	<% end %>	
