added name and ausername to chit refactored

--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -23,6 +23,7 @@
 	
 		<div class="chit">
 			<ul>
+				<li> <%= chitt.name %> <span> <%= chitt.user_name %> </span> </li>
 				<li> <%= chitt.content %> <span> <%= chitt.at_time %> </span> </li>
 			</ul>
 		</div>
