--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@
 		<div class="chitt">
 			<ul>
 				<li> <%= chitt.name %>    <span> <%= chitt.user_name %> </span> </li>
-				<li> <%= chitt.content %> <span> <%= chitt.at_time   %> </span> </li>
+				<li> <%= chitt.content %> <span> <%= format_time(chitt.at_time)%> </span> </li>
 			</ul>
 		</div>
 	<% end %>	
