--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,5 +1,17 @@
+/* CSS styles */
+@import url(http://fonts.googleapis.com/css?family=Indie+Flower);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 * {
-  color: red;
-  font-size: 55px; }
+  margin: 0;
+  padding: 0; }
+
+* {
+  font-family: 'Open Sans Condensed', sans-serif; }
+
+html {
+  background: url(images/back.png); }
+
+h1 {
+  font-family: 'Indie Flower', cursive; }
 
 /*# sourceMappingURL=style.css.map */
