--- a/app/public/style.css
+++ b/app/public/style.css
@@ -14,4 +14,43 @@ html {
 h1 {
   font-family: 'Indie Flower', cursive; }
 
+header {
+  width: 97%;
+  margin: 0 auto;
+  background: rgba(247, 143, 10, 0.7);
+  padding: 20px;
+  box-shadow: 0px 2px 5px; }
+  header div {
+    width: 40%;
+    margin: 0 auto; }
+    header div h1 {
+      position: absolute;
+      top: -5px;
+      font-size: 60px;
+      letter-spacing: 10px;
+      color: #55ACEE;
+      text-shadow: 4px 1px 2px black; }
+    header div .nav_links a {
+      text-decoration: none;
+      font-size: 20px;
+      border: 1px solid black;
+      padding: 4px 10px;
+      border-radius: 5px;
+      color: #951102; }
+      header div .nav_links a:first-child {
+        margin-left: 50%; }
+      header div .nav_links a:last-child {
+        float: right;
+        position: relative;
+        top: -5px;
+        right: 30px; }
+      header div .nav_links a:hover {
+        background: #55ACEE;
+        color: white;
+        border-color: white; }
+
+.wrapper {
+  width: 40%;
+  margin: 0 auto; }
+
 /*# sourceMappingURL=style.css.map */
