--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,9 +2,10 @@
 	<% @chitters.each do | chitt | %>
 	
 		<div class="chitt">
+			<img src="/images/chitter.gif" alt="chitter bird">
 			<ul>
-				<li class="info_user"> <%= chitt.name %>    <span> <%= chitt.user_name %> </span> </li>
-				<li class="info_chit"> <%= chitt.content %> <span> <%= format_time(chitt.at_time)%> </span> </li>
+				<li class="info_user"> <%= chitt.name %>  known as  <span> <%= chitt.user_name %> </span> </li>
+				<li class="info_chit"> <%= chitt.content %> <span>Chitted at <%= format_time(chitt.at_time)%> </span> </li>
 			</ul>
 		</div>
 	<% end %>	
