--- a/app/public/style.css
+++ b/app/public/style.css
@@ -58,72 +58,36 @@ header {
       border: 2px solid white;
       background: #7FD4BC;
       color: white;
-      padding: 5px;
+      padding: 25px;
       font-size: 22px;
       letter-spacing: 3px;
       border-radius: 40px;
       margin: 10% 0; }
       .wrapper .chitters .chitt img {
+        float: left;
         width: 50px;
         border: 2px solid;
         padding: 10px;
         border-radius: 50px;
         box-shadow: -1px -1px 2px black;
         position: relative;
-        right: 45px;
-        top: 15px; }
-      .wrapper .chitters .chitt ul {
-        float: right;
+        top: -10px;
+        right: 10px; }
+      .wrapper .chitters .chitt ul li {
+        list-style: none; }
+      .wrapper .chitters .chitt ul .info_user {
+        color: #F78F0A;
+        text-shadow: 1px 1px white;
+        font-size: 25px;
         position: relative;
-        top: -80px;
-        width: 450px; }
-        .wrapper .chitters .chitt ul li {
-          list-style: none; }
-        .wrapper .chitters .chitt ul .info_user {
-          color: #F78F0A;
-          text-shadow: 1px 1px white;
-          font-size: 30px;
-          position: relative;
-          top: -15px; }
-        .wrapper .chitters .chitt ul .info_chit span {
-          position: relative;
-          top: 37px; }
-    .wrapper .chitters .chitt:nth-child(even):before {
-      content: " ";
-      position: relative;
-      top: 97px;
-      width: 0;
-      height: 0;
-      border: 30px solid;
-      border-color: white transparent transparent;
-      left: 30px; }
-    .wrapper .chitters .chitt:nth-child(even):after {
-      content: " ";
-      position: relative;
-      top: 62px;
-      left: 33px;
-      height: 0;
-      width: 0;
-      border: 27px solid;
-      border-color: #7FD4BC transparent transparent; }
-    .wrapper .chitters .chitt:nth-child(odd):before {
-      content: " ";
-      position: relative;
-      top: 97px;
-      width: 0;
-      height: 0;
-      border: 30px solid;
-      border-color: white transparent transparent;
-      left: 440px; }
-    .wrapper .chitters .chitt:nth-child(odd):after {
-      content: " ";
-      position: relative;
-      top: 62px;
-      left: 33px;
-      height: 0;
-      width: 0;
-      border: 27px solid;
-      border-color: #7FD4BC transparent transparent;
-      left: 443px; }
+        top: -65px;
+        border: 3px solid white;
+        width: 480px;
+        margin: 0 auto;
+        border-radius: 6px;
+        background: #7FD4BC; }
+      .wrapper .chitters .chitt ul .info_chit {
+        position: relative;
+        top: -60px; }
 
 /*# sourceMappingURL=style.css.map */
