styled sign in and sign up pages

--- a/app/public/sass/style.scss
+++ b/app/public/sass/style.scss
@@ -4,25 +4,23 @@
 
 // Mixins
 
-@mixin arrow_chitt_before(){
-	content: " ";
-	position: relative;
-	top: 97px;
-	width: 0;
-	height: 0;
-	border: 30px solid;
-	border-color: white transparent transparent;
-}
+@mixin style_button(){
+	font-size: 20px;
+	border: 2px solid #7FD4BC;
+	color: #7FD4BC;
+	padding: 4px 10px;
+	text-shadow: 0px 1px black;
+	border-radius: 5px;
+	background: whitesmoke;
+	font-weight: 400;
+	margin-left: 50px;
+	cursor: pointer;
 
-@mixin arrow_chitt_after(){
-	content: " ";
-	position: relative;
-	top: 62px;
-	left: 33px;
-	height: 0;
-	width: 0;
-	border: 27px solid;
-	border-color: #7FD4BC transparent transparent;
+	&:hover{
+					background: #7FD4BC;
+					color: white;
+					border-color: white;
+				}
 }
 
 
@@ -49,7 +47,7 @@ header{
 	box-shadow: 0px 2px 5px;
 
 	div{
-		width: 40%;
+		width: 750px;
 		margin: 0 auto;
 
 		h1{
@@ -94,7 +92,7 @@ header{
 
 .wrapper{
 
-	width: 40%;
+	width: 750px;
 	margin: 0 auto;
 
 	.chitters{
@@ -123,11 +121,6 @@ header{
 			}
 
 			ul{
-				// float: right;
-				// position: relative;
-				// top: -80px;
-				// width: 450px;
-
 				li{
 					list-style: none;
 				}
@@ -155,11 +148,70 @@ header{
 	}
 }
 
+.new_user,
+.new_session,
+.profile{
 
+	margin: 50px 0;
 
+	form{
+		width: 500px;
+		margin: 0 auto;
 
+		input{
+			margin: 15px auto;
+			height: 30px;
+			width: 200px;
+			font-size: 20px;
+			padding: 3px;
 
+			&:focus{
+				outline: none !important; 
+				border:1px solid #7FD4BC;
+				box-shadow:0 0 10px #7FD4BC;
+				color: #7FD4BC;
+			}
+		}
 
+		button{
+			@include style_button();
+		}
+	}
+}
+
+.new_session form button{ margin-left: 170px }
+
+.profile{
+
+	.nav_profile{
+		
+		position:relative;
+		top: -10px;
+
+		h1{
+			color: #7FD4BC;
+			font-size: 30px;
+			text-shadow: 1px 1px black;
+			letter-spacing: 4px;
+		}
+
+		button{
+			float: right;
+			position: relative;
+			top: -30px;
+		}
+	}
+
+	textarea{
+
+				border:1px solid #7FD4BC;
+		&:focus{
+				outline: none !important; 
+				box-shadow:0 0 10px #7FD4BC;
+			}
+	}
+
+}
 
 
 
