--- a/app/views/partials/errors.erb
+++ b/app/views/partials/errors.erb
@@ -1,6 +1,6 @@
 <section class="errors_box">
 	<% if flash[:errors] && !flash[:errors].empty? %>
-	  <p>Sorry, there were the following problems with the form.</p>
+	  <p>Sorry, there were the following problems with the form</p>
 	  <ul class="messages errors">
 	    <% flash[:errors].each do |error| %>
 	      <li><%= error %></li>
