updated readme file

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,8 @@
 	<title>Chitter</title>
 
 	<link rel="stylesheet" href="/style.css">
+
+	<link rel="shortcut icon" href="http://nuptialbuzz.com/wp-content/uploads/2014/07/Twitter.png">
 </head>
 <body>
 
